src/objects/Program_Plan__c.object
<CustomObject>
    <description>Links Courses to an Academic Program to create a path for students to follow. An Academic Program can list multiple Courses, and a Course can be associated with multiple Academic Programs.</description>
    <label>Program Plan</label>
    <nameField>
        <label>Program Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Academic Program this Program Plan is for, for example, BA in Philosophy.</description>
        <inlineHelpText>The Academic Program this Program Plan is for, for example, BA in Philosophy.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Program Plans</relationshipLabel>
        <relationshipName>Program_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>The description of Program Plan.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>The end date for the Program Plan.</description>
        <inlineHelpText>The end date for the Program Plan.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this is the Program Plan currently in effect for the selected Academic Program.</description>
        <inlineHelpText>Indicates this is the Program Plan currently in effect for the selected Academic Program.</inlineHelpText>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>The date this Program Plan went into effect.</description>
        <inlineHelpText>The date this Program Plan went into effect.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Select &quot;Current&quot; if this Program Plan has students enrolled in it, or is eligible for students to enroll. Otherwise, select &quot;Archived.&quot;</description>
        <inlineHelpText>Select &quot;Current&quot; if this Program Plan has students enrolled in it, or is eligible for students to enroll. Otherwise, select &quot;Archived.&quot;</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                    <default>true</default>
                    <label>Current</label>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Required_Credits__c</fullName>
        <description>The total number of credits a student needs to complete to satisfy this Program Plan.</description>
        <inlineHelpText>The total number of credits a student needs to complete to satisfy this Program Plan.</inlineHelpText>
        <label>Total Required Credits</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>The version of the Program Plan, for example, Spring 2020.</description>
        <inlineHelpText>The version of the Program Plan, for example, Spring 2020.</inlineHelpText>
        <label>Version</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Primary_Program_Plan</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Is_Primary__c</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Is_Primary__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Primary Program Plans</label>
    </listViews>
</CustomObject>